--- a/filter_sequences.Rmd
+++ b/filter_sequences.Rmd
@@ -24,142 +24,354 @@ library(pspline.inference)
 ```
 
 
-
-
-```{r raw metadata}
-dataset <- vroom::vroom("meta_data.tsv")
-states <- unique(dataset$division_exposure)
+```{r raw metadata world, warning=FALSE}
+dataset <- vroom::vroom("metadata_us_raw.csv")
+ 
 
 end.of.epiweek <- function(x, end = 6) {
   offset <- (end - 4) %% 7
   num.x <- as.numeric(x)
   return(x - (num.x %% 7) + offset + ifelse(num.x %% 7 > offset, 7, 0))
 }
-
-metadata <- dataset %>% 
+ 
+# 
+metadata <- dataset %>%
   ## Dummy date variable
-  mutate(copy_date = as.numeric(date)) %>% 
+  mutate(copy_date = as.numeric(date)) %>%
   ## Choosen lineages to be analyzed
-  mutate(voc_cdc = case_when(grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*B.1.1.7)|(?=.*^Q)' , 
+  mutate(voc_cdc = case_when(grepl(x = pango_lineage,
+                                   pattern = '^(?=.*B.1.1.7)|(?=.*^Q)' ,
                                    perl = TRUE) ~ 'Alpha*',
-                             grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*B.1.351)', 
+                             grepl(x = pango_lineage,
+                                   pattern = '^(?=.*B.1.351)',
                                    perl = TRUE) ~ 'Beta*',
-                             grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*^P.1)', 
+                             grepl(x = pango_lineage,
+                                   pattern = '^(?=.*^P.1)',
                                    perl = TRUE) ~ 'Gamma*',
-                             grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*B.1.617.2)', 
+                             grepl(x = pango_lineage,
+                                   pattern = '^(?=.*B.1.617.2)',
                                    perl = TRUE) ~ 'Alpha*',
-                             grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*BA.1)|(?=.*B.1.1.529)', 
+                             grepl(x = pango_lineage,
+                                   pattern = '^(?=.*BA.1)|(?=.*B.1.1.529)',
                                    perl = TRUE) ~ 'Omicron BA.1*',
-                             grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*BA.2.75)', 
+                             grepl(x = pango_lineage,
+                                   pattern = '^(?=.*BA.2.75)',
                                    perl = TRUE) ~ 'Omicron BA.2.75*',
-                             grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*BA.2)(?!.*BA.2.75)', 
+                             grepl(x = pango_lineage,
+                                   pattern = '^(?=.*BA.2)(?!.*BA.2.75)',
                                    perl = TRUE) ~ 'Omicron BA.2*',
-                             grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*BA.3)', 
+                             grepl(x = pango_lineage,
+                                   pattern = '^(?=.*BA.3)',
                                    perl = TRUE) ~ 'Omicron BA.3*',
-                             grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*BA.4)', 
+                             grepl(x = pango_lineage,
+                                   pattern = '^(?=.*BA.4)',
                                    perl = TRUE) ~ 'Omicron BA.4*',
-                             grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*BA.5)', 
+                             grepl(x = pango_lineage,
+                                   pattern = '^(?=.*BA.5)',
                                    perl = TRUE) ~ 'Omicron BA.5*',
-                             grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*XBB.1.5)', 
+                             grepl(x = pango_lineage,
+                                   pattern = '^(?=.*XBB.1.5)',
                                    perl = TRUE) ~ 'XBB.1.5*',
-                             grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*XBB.1)(?!.*XBB.1.5)', 
+                             grepl(x = pango_lineage,
+                                   pattern = '^(?=.*XBB.1)(?!.*XBB.1.5)',
                                    perl = TRUE) ~ 'XBB.1*',
-                             grepl(x = pango_lineage, 
-                                   pattern = '^(?=.*X)(?!.*XBB.1.5)(?!.*XBB.1)', 
+                             grepl(x = pango_lineage,
+                                   pattern = '^(?=.*X)(?!.*XBB.1.5)(?!.*XBB.1)',
                                    perl = TRUE) ~ 'Recombinant',
-                             TRUE ~ 'Other')) %>% 
+                             TRUE ~ 'Other')) %>%
   ## Completing dates to avoid missing dates
-  complete(date, nesting(voc_cdc), fill = list(copy_date = 0)) 
+  complete(date, nesting(voc_cdc), fill = list(copy_date = 0))  
   ## Putting date at the ending date of the epiweek
-  ## mutate(epiweek = end.of.e iweek(date))
+  
+  mutate(epiweek = end.of.epiweek(date))
+ 
+ 
+```
+
 
  
+```{r metadata USA get frequency, warning = FALSE}
+# upload data for all vocs in all states in the US 
+
+dataset <- vroom::vroom("metadata_us.csv")
+
+
+data_freq_voc <- dataset %>% 
+  filter(!is.na(strain)) %>% 
+  group_by(voc_cdc, epiweek) %>%
+  summarise(Frequency = n()) %>%
+  ungroup() %>%
+  group_by(epiweek) %>%
+  mutate(Frequency = Frequency / sum(Frequency))
+ 
+
+
+frequency_plot <- data_freq_voc %>% 
+  filter(voc_cdc == "Alpha*") %>% 
+  ggplot(aes(x = epiweek, y = Frequency, color = voc_cdc, fill = voc_cdc), alpha = .1) +
+  geom_bar(stat = "identity") +
+  labs(title = "Frequency",
+       x = "Date",
+       y = "Frequency") +
+  theme_minimal()
+
+frequency_plot
+
+ #ggsave("linear_regression/cases.pdf", width = 25, height = 13, unit="in", dpi = 300)
+
+``` 
+
+ 
+
+```{r, critical time, wanring = FALSE }
+
+#### find critical timing ###
+
+data_num_voc <- dataset %>% 
+  filter(!is.na(strain)) %>% 
+  group_by(voc_cdc, epiweek) %>%
+  summarise(cases = n()) %>%
+  filter(!is.na(epiweek)) %>% 
+  ungroup()
+
+
+
+deriv <- function(x, y) diff(y) / diff(x)
+middle_pts <- function(x) x[-1] - diff(x) / 2
+
+
+variant  <- c("Alpha*",
+              "Beta*",
+              "Delta*",
+              "Gamma*",
+              "Omicron BA.1*",
+              "Omicron BA.2*", 
+              "Omicron BA.4*",   
+              "Omicron BA.5*")
+
+day1 <- c()
+day2 <- c()
+day3 <- c()
+
+for(k in 1:length(variant)){
+
+data_subset <- data_num_voc %>% filter(voc_cdc == variant[k])
+data_subset$wk <- c(1:length(data_subset$epiweek))
+
+
+Gmodels  <- gam(cases ~ s(x = wk, bs = "ps"),
+                      family = poisson,
+                      method = "REML",
+                      control = list(maxit = 1000000),
+                      data = data_subset)
+
+# {plot(data_subset$wk, data_subset$cases)
+#  lines(1:(length(data_subset$wk)), fitted(Gmodels))
+# }
+
+
+
+ 
+#generate time sequence
+t = seq(1, length(data_subset$wk), 0.5)
+dtime = seq(1, length(data_subset$wk), 0.5)
+
+
+cases.samples <-  pspline.sample.timeseries(Gmodels,
+                                                 data.frame(wk = t),
+                                                 pspline.outbreak.cases,
+                                                 samples = 500)
+
+
+onset.samples_temp  = cases.samples  %>%
+    group_by(pspline.sample) %>% # for each sample do the following
+    do((function(data){
+      deriv.pred = data.frame(deriv = diff(data$cases)/diff(data$wk), # calculate the first derivative
+                              wk = c(1:length(diff(t))))
+
+      second_d = data.frame(second.deriv = deriv(middle_pts(dtime), deriv(dtime, data$cases)), # calculate the second derivative
+                            wk = c(1:(length(diff(t))-1)))
+
+      indicator = deriv.pred[which(deriv.pred$deriv > 0),]  # only look at second derivatives in the increasing segment (first derivative > 0 )
+      second_d_test <- second_d[second_d$wk%in%indicator$wk,]
+
+      onset = dtime[second_d_test$wk[second_d_test$second.deriv == max(second_d_test$second.deriv)]] #find when second derivative of smooth functions reached its maximum
+
+      indicator = deriv.pred[which(deriv.pred$deriv < 0),]  # only look at second derivatives in the increasing segment (first derivative > 0 )
+      second_d_test <- second_d[second_d$wk%in%indicator$wk,]
+
+      offset = dtime[second_d_test$wk[second_d_test$second.deriv == max(second_d_test$second.deriv)]]
+
+      data.frame(
+        pspline.sample = tail(data$pspline.sample, 1),
+        onset = onset,
+        offset = offset,
+        casess = data$cases[which(data$wk == onset)]) #find the case number when the second derivative reach its maximum
+    })(.)) %>%
+    ungroup()
+
+
+initial_week <- median(onset.samples_temp$onset)
+off_week <- median(onset.samples_temp$offset)
+
+initial_date  <- data_subset$epiweek[initial_week]
+peak_date  <- data_subset$epiweek[which.max(data_subset$cases)]
+off_date  <- data_subset$epiweek[off_week]
+
+
+day1[k] <- initial_date
+day2[k] <- peak_date
+day3[k] <- off_date
+
+################################################################################################
+
+data_subset <- dataset %>% 
+  filter(voc_cdc == variant[k]) %>% 
+  filter(epiweek >= initial_date & epiweek <= peak_date)
+ 
+epiweek <- unique(data_subset$epiweek)
+N_unique_date <- length(epiweek)
+N_total_seq_per_variant_per_period <- 2500/9/2 # try to get total 2500 samples, 9 variants, 2 periods
+N_seq_per_variant_per_day <- round(N_total_seq_per_variant_per_period / N_unique_date)
+ 
+ 
+
+sel <- list()
+for(i in 1:N_unique_date){
+  if(n_distinct(subset(data_subset$gisaid_epi_isl, data_subset$epiweek == epiweek[i])) 
+     <= N_seq_per_variant_per_day ){
+
+    sel[[i]] = subset(data_subset$gisaid_epi_isl, data_subset$epiweek == epiweek[i])
+  }
+  
+  else{
+    sel[[i]] = sample(subset(data_subset$gisaid_epi_isl, data_subset$epiweek == epiweek[i]), size =  N_seq_per_variant_per_day,  replace = FALSE)
+  }
+
+}
+
+vroom::vroom_write(x = as.data.frame(unlist(sel)), file = paste0("raw_sequence/",gsub("\\*", "", variant[k]), "_phase1.csv"))
+
+
+
+
+
+
+
+data_subset <- dataset %>% 
+  filter(voc_cdc == variant[k]) %>% 
+  filter(epiweek <= off_date & epiweek >= peak_date)
+ 
+epiweek <- unique(data_subset$epiweek)
+N_unique_date <- length(epiweek)
+N_total_seq_per_variant_per_period <- 2500/9/2 # try to get total 2500 samples, 9 variants, 2 periods
+N_seq_per_variant_per_day <- round(N_total_seq_per_variant_per_period / N_unique_date)
+ 
+ 
+
+sel <- list()
+for(i in 1:N_unique_date){
+  if(n_distinct(subset(data_subset$gisaid_epi_isl, data_subset$epiweek == epiweek[i])) 
+     <= N_seq_per_variant_per_day ){
+
+    sel[[i]] = subset(data_subset$gisaid_epi_isl, data_subset$epiweek == epiweek[i])
+  }
+  
+  else{
+    sel[[i]] = sample(subset(data_subset$gisaid_epi_isl, data_subset$epiweek == epiweek[i]), size =  N_seq_per_variant_per_day,  replace = FALSE)
+  }
+
+}
+
+vroom::vroom_write(x = as.data.frame(unlist(sel)), file = paste0("raw_sequence/",gsub("\\*", "", variant[k]), "_phase2.csv"))
+
+
+}
+
+ 
+
+
 ```
 
 
 
 
- 
-```{r, warning = FALSE}
-# upload data for all vocs in all states in the US 
+```{r filter out high coverage, wanring = FALSE}
 
-dataset <- vroom::vroom("metadata_us.csv")
+variant  <- c("Alpha",
+              "Beta",
+              "Delta",
+              "Gamma")
 
-data_voc <- dataset %>% 
-  filter(!is.na(division))  %>% 
-  ## dummy date column
-  mutate(copy_date = as.numeric(epiweek)) %>%  
-  ## Grouping by epiweek, state and voc_cdc
-  group_by(epiweek, division, voc_cdc, gisaid_epi_isl) %>% 
-  summarise_at(vars(copy_date), list(n = sum)) %>%  
-  mutate(freq = round(100*n/sum(n),2)) %>%  
-  rename(name_states = division)  %>% 
-  ungroup()
-  
+begin_date <- as.Date(day1[1:4])
 
+peak_date <- as.Date(day2[1:4])
 
-data_voc2 <- data_voc %>% 
-  group_by(epiweek, voc_cdc) %>% 
-  summarise(total_case = sum(n))  # use data_voc2 to identify the date for each variant of concern
-
- 
-
-ggplot(data = data_voc2) + 
-  geom_line(aes( x = epiweek, y = total_case, color = voc_cdc), size = 2) + 
-  theme_bw() + 
-  facet_wrap(~voc_cdc, scales = "free") 
-#ggsave("linear_regression/cases.pdf", width = 25, height = 13, unit="in", dpi = 300)
-
-
-########### get ID ############
-
-
-data_alpha <- data_voc2 %>% filter(voc_cdc == "Omicron BA.5*")
-date <- unique(data_alpha$epiweek)
-seq.case <- c()
-for (i in 1:length(date)){
-  seq.case[i] <- n_distinct(subset(data_voc$gisaid_epi_isl, data_voc$epiweek == date[i] & data_voc$voc_cdc == "Omicron BA.5*"))
-}
-
-
-sel <- list()
-
-for(i in 1:length(date)){
-  if(n_distinct(subset(data_voc$gisaid_epi_isl, data_voc$epiweek == date[i] & data_voc$voc_cdc == "Omicron BA.5*")) <= 40 ){
-
-    sel[[i]] = subset(data_voc$gisaid_epi_isl, data_voc$epiweek == date[i] & data_voc$voc_cdc == "Omicron BA.5*")
-  }
-  
-  else{
-    sel[[i]] = sample(subset(data_voc$gisaid_epi_isl, data_voc$epiweek == date[i] & data_voc$voc_cdc == "Omicron BA.5*"), size =  40,  replace = FALSE)
-  }
-
-}
-
-vroom::vroom_write(x = as.data.frame(unlist(sel)), file = "VOC_fasta/ID_BA5.csv")
-
-
-
+off_date <- as.Date(day3[1:4])
 
 ############# filter out low coverage rate ############
+for(k in 1:length(variant)){
+  
+coverage <- vroom::vroom(paste0("nextclade_coverage_csv/",variant[k],"_2.tsv"))
+coverage <- coverage %>% filter(coverage >= 0.95) 
+coverage <- coverage %>% filter(clade_who == variant[k])
+coverage$Date <- str_extract(coverage$seqName, "\\d{4}-\\d{2}-\\d{2}")
+#coverage <- coverage %>% filter(Date >= begin_date[k] & Date < peak_date[k])
+coverage <- coverage %>% filter(Date < off_date[k] & Date >= peak_date[k])
+N_seq <- length(coverage$seqName)
+if(N_seq > 200){
+   seq_Name <- sample(coverage$seqName, size =  120,  replace = FALSE)
+   sequence_ID <- as.data.frame(str_extract(string = coverage$seqName, pattern = "EPI_ISL_\\d+"))
+   }
+else{
+     sequence_ID <- as.data.frame(str_extract(string = coverage$seqName, pattern = "EPI_ISL_\\d+"))
+}
+#sequence_ID <- as.data.frame(str_extract(string = coverage$seqName, pattern = "EPI_ISL_\\d+"))
+vroom::vroom_write(x = sequence_ID, file = paste0("filtered_sequence_ID/",variant[k],"_phase2.csv"))
+}
 
-coverage_alpha <- vroom::vroom("coverage_BA5.csv")
-coverage_alpha <- coverage_alpha %>% filter(coverage >= 0.95)
-coverage_alpha <- coverage_alpha %>% filter(str_extract(string = coverage_alpha$Nextclade_pango, pattern = "BA.5") == "BA.5")
-ID_alpha_refined <- as.data.frame(str_extract(string = coverage_alpha$seqName, pattern = "EPI_ISL_\\d+"))
-vroom::vroom_write(x = ID_alpha_refined, file = "VOC_fasta/ID_BA5_refined.csv")
+
+
+
+
+
+
+variant  <- c("BA1",
+               "BA2",
+               "BA4",
+               "BA5")
+
+patterns <- c('^(?=.*BA.1)|(?=.*B.1.1.529)',
+              '^(?=.*BA.2)(?!.*BA.2.75)',
+              '^(?=.*BA.4)',
+              '^(?=.*BA.5)')
+
+begin_date <- as.Date(day1[5:8])
+
+peak_date <- as.Date(day2[5:8])
+
+off_date <- as.Date(day3[5:8])
+
+############# filter out low coverage rate ############
+for(k in 1:length(variant)){
+
+coverage <- vroom::vroom(paste0("nextclade_coverage_csv/",variant[k],"_1.tsv"))
+coverage <- coverage %>% filter(coverage >= 0.95) 
+coverage <- coverage %>% filter(grepl(Nextclade_pango, pattern = patterns[k], perl = TRUE) == TRUE)
+coverage$Date <- str_extract(coverage$seqName, "\\d{4}-\\d{2}-\\d{2}")
+coverage <- coverage %>% filter(Date >= begin_date[k] & Date < peak_date[k])
+#coverage <- coverage %>% filter(Date < off_date[k] & Date >= peak_date[k])
+N_seq <- length(coverage$seqName)
+if(N_seq > 200){
+   seq_Name <- sample(coverage$seqName, size =  120,  replace = FALSE)
+   sequence_ID <- as.data.frame(str_extract(string = coverage$seqName, pattern = "EPI_ISL_\\d+"))
+   }
+   sequence_ID <- as.data.frame(str_extract(string = coverage$seqName, pattern = "EPI_ISL_\\d+"))
+     
+#sequence_ID <- as.data.frame(str_extract(string = coverage$seqName, pattern = "EPI_ISL_\\d+"))
+vroom::vroom_write(x = sequence_ID, file = paste0("filtered_sequence_ID/",variant[k],"_phase1.csv"))
+}
+
  
 
 ```
